--- a/package.json
+++ b/package.json
@@ -25,12 +25,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-org/gaia.git",
-    "directory": "gaia-api"
+    "url": "https://github.com/emmygrace/gaia-api.git"
   },
-  "homepage": "https://github.com/your-org/gaia#readme",
+  "homepage": "https://github.com/emmygrace/gaia-api#readme",
   "bugs": {
-    "url": "https://github.com/your-org/gaia/issues"
+    "url": "https://github.com/emmygrace/gaia-api/issues"
   },
   "license": "MIT",
   "keywords": [
@@ -40,7 +39,7 @@
     "typescript",
     "sdk"
   ],
-  "author": "",
+  "author": "Emmy Grace",
   "sideEffects": false,
   "publishConfig": {
     "access": "public"
