--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   },
   "files": [
     "dist",
-    "README.md"
+    "README.md",
+    "LICENSE",
+    "CHANGELOG.md"
   ],
   "scripts": {
     "build": "tsup",
@@ -25,11 +27,11 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/emmygrace/gaia-api-client.git"
+    "url": "https://github.com/emmygrace/coeus-api-client.git"
   },
-  "homepage": "https://github.com/emmygrace/gaia-api-client#readme",
+  "homepage": "https://github.com/emmygrace/coeus-api-client#readme",
   "bugs": {
-    "url": "https://github.com/emmygrace/gaia-api-client/issues"
+    "url": "https://github.com/emmygrace/coeus-api-client/issues"
   },
   "license": "MIT",
   "keywords": [
